# quark

./: .gitignore  CMakeLists.txt  LICENSE  README.md
docs/: grammar.ebnf
examples/: arrays.k  c_interop.k  control_flow.k  functions.k  hello.k  http_request.k  inheritance.k  json_parsing.k  list.k  map.k  map_int.k  map_literal.k  math.k  pointers.k  strings.k  structs.k  variables.k
include/: builtin_functions.h  cli.h  codegen.h  codegen_original.h  codegen_types.h  compilation_cache.h  compilation_context.h  compilation_progress.h  compiler_api.h  error_reporter.h  expression_codegen.h  external_functions.h  ftxui_error_display.h  lexer.h  module_resolver.h  package_manager.h  parser.h  semantic_analyzer.h  source_manager.h  statement_codegen.h
include/lsp/: lsp_ast.h  lsp_lexer.h  lsp_parser.h  lsp_server.h  lsp_types.h
lib/: builtins.k
lib/http/: http.k  quark_http.cpp  quark_http.h
lib/io/: io.k  quark_io.cpp  quark_io.h
lib/json/: json.k  quark_json.cpp  quark_json.h
lib/map/: quark_map.cpp
lib/runtime/: quark_runtime.cpp
lib/toml/: quark_toml.cpp  quark_toml.h  toml.k
lib/ws/: quark_ws.cpp  quark_ws.h  ws.k
scripts/: check_examples.sh  run_tests.ps1  run_tests.sh
src/: builtin_functions.cpp  cli.cpp  codegen.cpp  codegen_types.cpp  compilation_cache.cpp  compilation_progress.cpp  compiler_api.cpp  error_reporter.cpp  expression_codegen.cpp  external_functions.cpp  ftxui_error_display.cpp  lexer.cpp  module_resolver.cpp  package_manager.cpp  parser.cpp  quark.cpp  semantic_analyzer.cpp  source_manager.cpp  statement_codegen.cpp
src/lsp/: lsp_lexer.cpp  lsp_parser.cpp  lsp_server.cpp  main.cpp
tests/: arith.k  arrays_basic.k  arrays_bool_ops.k  arrays_int_ops.k  arrays_length.k  bitwise.k  bool_logic.k  bool_or_short_circuit.k  builtins_standardized.k  c_interop.k  c_interop_float.k  casts.k  char_full.k  compound_assign.k  extension_methods.k  extern_named_params.k  extern_var.k  fetch.k  float_literal.k  for_break_continue.k  for_inclusive_range.k  for_loop_stack.k  formatting.k  function_pointers.k  gtest_runner.cpp  hex_literals.k  http_basic.k  imc.k  implicit_float_assign.k  import_bare_module.k  inheritance_extend.k  inheritance_impl.k  integer_types.k  json_array.k  json_basic.k  json_unquoted.k  map.k  map_literal.k  match_null.k  math_builtins.k  (+20 more)
tests/package/: .gitignore  Quark.toml
tests/package/src/: main.k
